static/css/style.css
/* ... */
#prepare-previews {
  width: 430px;
  height: 100%;
  float: right;
  margin-bottom: 20px;
}

#prepare-submit {
  clear: both;
  float: left;
  display: block;
  position: absolute;
  bottom: 0;
  width: 100%;
  padding-top: 10px;
  padding-bottom: 20px;

  background-color: rgba(255, 255, 255, 0.8);

  -webkit-transition: box-shadow 0.25s ease;
  -moz-transition:    box-shadow 0.25s ease;
  -o-transition:      box-shadow 0.25s ease;
  transition:         box-shadow 0.25s ease;
}

#prepare-submit.fixed {
  position: fixed;
  width: 940px;
  box-shadow: 0px -6px 7px 0px rgba(50, 50, 50, 0.25);
}

.filecontents { /* Used in scrub and cut */
  clear: left;
  float: left;
  white-space: pre-wrap; /* Used to show the newlines in the text */
  height: auto;
  display: block;
  margin-top: 10px;
}

/* ================== SCRUB STYLING ============================== */

#normalscrubbingoptions {
  float: left; 
}

#mainscruboptions {
  float: left;
}

#punctbox {
  height: 50px;
}

#aposhyph {
  float: left;
  margin-left: 10px;
}

#tagsradiodiv {
  float: left;
  margin-top: 20px;
}

#tagsradio {
  margin-top: 7px;
}

#additionalscrubbingoptions {
  clear: left;
  float: left;
}

.optuploadbuttondiv {
  display: inline-block;
}

textarea.manualinput {
  font-size: 14px;
  line-height: 14px;
  margin-top: 2px;
  margin-bottom: 6px;
  height:50px;
  width:350px;
  max-width:350px;
  margin-left:12px;
}

.bttn.uploadbttn {
  line-height: 15px;
  font-size: 15px;
  background-color: #1abc9c;
  width: 80px;
  padding: 3px 6px;
}

.bttnfilelabels {
  cursor: pointer;
  text-align: center;
  color: #00B226;

  position: absolute;
  top: 8px;
}

.bttnfilelabels#scfileselectbttnlabel {
  top: 70px;
}

.bttnfilelabels:before {
  position: absolute;
  top: -20px;

  color: white;

  content: "Click to no longer use stored version.";
  width: 250px;
  background-color: gray;
  box-shadow: 2px 2px 6px #222;

  display: none;
  opacity: 0;
  z-index: 4;

  -webkit-transition: opacity .25s ease;
  -moz-transition:    opacity .25s ease;
  -o-transition:      opacity .25s ease;
  transition:         opacity .25s ease;
}

.bttnfilelabels:hover:before {
  display: block;
  opacity: 1;
}

#entityrules {
  margin-top: 2px;
  margin-left: 29px;
}

#specialchartext {
  clear: both;
  margin-left: 210px;
  margin-bottom: 15px;
}

#ruleslink {
  margin-left: 10px;
}

#swfileselectbttnlabel {
  position: absolute;
  bottom: 10px;
}

.advanced-options {
  display: none;
}

.advanced-option {
  clear: left;
  float: left;
}

.icon-help.scrub {
  left: -20px;
  top: 0;
}

.icon-help.tiny.scrub-additional {
  left: 360px;
  top: 7px;
}

.icon-help.tiny.scrub-additional#sc-tooltip {
  top: 70px;
}

/* ================== CUT STYLING ================================ */

.cuttingoptionswrapper {
  float: left;
}

.cuttingoptionsfieldset {
  float: left;
}

.cutsetnaming {
  /*width: 300px;*/
}

#cutrenamingdiv {
  width: 284px;
  display: block;
  float: left;
}

.cutting-radio {
  clear: right;
  float: right;
  margin-right: 10px;
  margin-bottom: 10px;
}

.cutting-input {
  clear: right;
  float: right;
  margin-right: 10px;
  margin-bottom: 5px;
}

#cuttingmodediv {
  font-size: 20px;
  clear: left;
  float: left;
  margin-top: 25px;
}

#supercuttingmodemessage {
  font-size: 14px;
  color: green;
}

.individualpreviewwrapper {
  position: relative;
}

.individualpreviewlegend {
  color: inherit;
}

.sizeradio,
.numberradio {
  display: inline;
}

.sizeradio {
  margin-right: 10px;
}

.cuttingdiv {
  clear: both;
  float: left;
  width: 100%;
  margin-top: 5px;
}

.textinput {
  display: inline-block;
  margin-top: 0px;
  margin-left: 5px;
}

.cuttextinput {
  width: 100px;
}

.lastpropinput {
  width: 60px;
}

.indivcutbuttons {
  background-color: #999999;
  width: 150px;
  padding: 2px 4px;
  display: inline-block;
  position: absolute;
  top: 12px;
  right: 0;
}

.individualcuttingcheckboxes {
  width: 240px;
}

.filechunk {
  clear: both;
  margin-bottom: 20px;
  padding-left: 5px;
  border-left: 1px solid gray;
}

.filechunklabel {
  border-bottom: 1px solid gray;
  margin: 2px;
  font-weight: 700;
}

.icon-help.cut {
  right: -5px;
  top: 0;
}

.cut-label-options {
  float: left;
}

/* ================== VISUALIZE STYLING ========================== */

/* ================== VIZ STYLING =========================== */

#svgid {
  margin: 0;
  padding: 0;
  position: absolute;
}

#getviz {
  margin-left: 15px;
}

.vizoptions {
  float: left;
  margin-right: 15px;
}

 /*Older tooltip styling can be removed if d3.tip works out all right*/
.bubbletip {
  position: absolute;
  display: block;
  z-index: 10000;
  border: 2px solid black;
  background-color: rgba(0,0,0,0.8);
  margin: auto;
  padding: 3px 5px 3px 5px;
  color: white;
  font-size: 12px;
  font-family: arial;
  border-radius: 5px;
  vertical-align: middle;
  text-align: center;
  min-width: 50px;
  overflow: auto;
  box-shadow: 0 0 7px black;
}

.d3-tip {
  line-height: 1;
  font-weight: bold;
  padding: 12px;
  background: rgba(0, 0, 0, 0.8);
  color: #fff;
  border-radius: 5px;
  text-align: center;  
  z-index: 10000;
  border: 2px solid black;
  margin: auto;
  padding: 3px 5px 3px 5px;
  vertical-align: middle;
  box-shadow: 0 0 7px black;
  overflow: auto;
}

#minlength {
  width: 50px;
}

#graphsize {
  width: 70px;
}

/* ================== WORDCLOUD STYLING ===================== */

#maxwords {
  width: 60px;
}

#segmentlist {
  width: 300px;
  margin-right: 10px;
}

#nosegments {
  font-weight: bold;
  color: red;
  text-align: center;
}

#rightsideoptions {
  float: right;
  text-align: right;
}

#leftsideoptions {
  float: left;
}

#angle-count {
  width: 30px;
}

#angle-from {
  width: 50px;
}

#angle-to {
  width: 50px;
}

#vis text:hover { 
  opacity: .7 !important;
}

#presets a {
  border-left: solid #666 1px;
  padding: 0 10px;
}

#presets a.first { 
  border-left: none; 
}

#keyword { 
  width: 300px; 
}

#fetcher { 
  width: 500px; 
}
/* ... */

